--- a/1_bigram_counting_demo.ipynb
+++ b/1_bigram_counting_demo.ipynb
@@ -911,7 +911,7 @@
     "\n",
     "# normalise the distribution\n",
     "P = N.float()\n",
-    "P = P / P.sum(1, keepdim=True)\n",
+    "P /= P.sum(1, keepdim=True)\n",
     "\n",
     "# sample 20 names\n",
     "ix = 0\n",
@@ -924,6 +924,43 @@
     "        out += itos[ix]\n",
     "    print(out)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_likelihood=tensor(-559891.7500)\n",
+      "nll=tensor(559891.7500)\n",
+      "2.454094171524048\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model with log likelyhood\n",
+    "log_likelihood = 0.0\n",
+    "n = 0\n",
+    "\n",
+    "for w in words:\n",
+    "    chs = ['.'] + list(w) + ['.']\n",
+    "    for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "        ix1 = stoi[ch1]\n",
+    "        ix2 = stoi[ch2]\n",
+    "        prob = P[ix1, ix2]\n",
+    "        logprob = torch.log(prob)\n",
+    "        log_likelihood += logprob\n",
+    "        n += 1\n",
+    "        # print(f'{ch1}{ch2}: {prob:.4f} {logprob:.4f}')\n",
+    "\n",
+    "print(f'{log_likelihood=}')\n",
+    "nll = -log_likelihood\n",
+    "print(f'{nll=}')\n",
+    "print(f'{nll/n}')"
    ]
   }
  ],
