Add batch normalisation to activations demo

--- a/4_nn_activations_gradients.ipynb
+++ b/4_nn_activations_gradients.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        " 'evelyn']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11897\n"
+      "12297\n"
      ]
     }
    ],
@@ -163,7 +163,12 @@
     "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.01\n",
     "b2 = torch.randn(vocab_size, generator=g) * 0\n",
     "\n",
-    "parameters = [C, W1, b1, W2, b2]\n",
+    "bngain = torch.ones((1, n_hidden))\n",
+    "bnbias = torch.zeros((1, n_hidden))\n",
+    "bnmean_running = torch.zeros((1, n_hidden))\n",
+    "bnstd_running = torch.ones((1, n_hidden))\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
     "print(sum(p.nelement() for p in parameters))\n",
     "for p in parameters:\n",
     "    p.requires_grad_()"
@@ -171,23 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0 loss: 3.2956013679504395\n",
-      "iteration 20000 loss: 2.5141141414642334\n",
-      "iteration 40000 loss: 2.059892416000366\n",
-      "iteration 60000 loss: 2.056925058364868\n",
-      "iteration 80000 loss: 2.2623987197875977\n",
-      "iteration 100000 loss: 2.16729736328125\n",
-      "iteration 120000 loss: 1.9038201570510864\n",
-      "iteration 140000 loss: 1.8418769836425781\n",
-      "iteration 160000 loss: 2.1798291206359863\n",
-      "iteration 180000 loss: 2.3487050533294678\n"
+      "iteration 0 loss: 3.3148751258850098\n",
+      "iteration 20000 loss: 2.4342966079711914\n",
+      "iteration 40000 loss: 2.142815113067627\n",
+      "iteration 60000 loss: 2.185208797454834\n",
+      "iteration 80000 loss: 2.223207950592041\n",
+      "iteration 100000 loss: 2.0916695594787598\n",
+      "iteration 120000 loss: 1.9413164854049683\n",
+      "iteration 140000 loss: 1.8984582424163818\n",
+      "iteration 160000 loss: 2.2586753368377686\n",
+      "iteration 180000 loss: 2.4788074493408203\n"
      ]
     }
    ],
@@ -206,6 +211,16 @@
     "    emb = C[Xb] # char embeddings\n",
     "    embcat = emb.view(-1, block_size * n_embd) # concatenate\n",
     "    hpreact = embcat @ W1 + b1 # pre-activation\n",
+    "\n",
+    "    # batch normalisation so they're unit gaussian\n",
+    "    bnmeani = hpreact.mean(0, keepdim=True)\n",
+    "    bnstdi = hpreact.std(0, keepdim=True)\n",
+    "    hpreact = bngain * (hpreact - bnmeani) / bnstdi + bnbias\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        bnmean_running = 0.999 * bnmean_running + 0.001 * bnmeani\n",
+    "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi\n",
+    "\n",
     "    h = torch.tanh(hpreact) # activation\n",
     "    logits = h @ W2 + b2\n",
     "    loss = F.cross_entropy(logits, Yb) # loss function\n",
@@ -303,15 +318,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train 2.0387990474700928\n",
-      "val 2.1068685054779053\n"
+      "train 2.0680298805236816\n",
+      "val 2.111121892929077\n"
      ]
     }
    ],
@@ -325,7 +340,12 @@
     "    }[split]\n",
     "    emb = C[x]\n",
     "    embcat = emb.view(-1, block_size * n_embd)\n",
-    "    h = torch.tanh(embcat @ W1 + b1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "\n",
+    "    # batch normalisation so they're unit gaussian\n",
+    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias\n",
+    "\n",
+    "    h = torch.tanh(hpreact)\n",
     "    logits = h @ W2 + b2\n",
     "    loss = F.cross_entropy(logits, y)\n",
     "    print(split, loss.item())\n",
@@ -348,7 +368,11 @@
     "\n",
     "#### after initialising first layer weights and biases lower (tanh was too active after the first iteration)\n",
     "- train 2.0375447273254395\n",
-    "- val 2.104278802871704"
+    "- val 2.104278802871704\n",
+    "\n",
+    "#### after adding batch norm\n",
+    "- train 2.0682168006896973\n",
+    "- val 2.110870361328125"
    ]
   },
   {
